@startuml
title ProcessMap Class Diagram

class ProcessMap
class Painter
class Pillow
class Shape
class Box
class Circle
class Triangle
class Gateway
class ExclusiveGateway
class InclusiveGateway
class ParallelGateway
Gateway <|-- Triangle
ExclusiveGateway <|-- Gateway
InclusiveGateway <|-- Gateway
ParallelGateway <|-- Gateway
Lane *-- ExclusiveGateway
Lane *-- InclusiveGateway
Lane *-- ParallelGateway

' class Data
' class Drum
class Activity
class Task
class SubProcess
Task <|-- Activity
SubProcess <|-- Activity
Lane *-- Task
Lane *-- SubProcess

class Event
class StartEvent
class EndEvent
class IntermediateEvent
StartEvent <|-- Event
EndEvent <|-- Event
IntermediateEvent <|-- Event
Lane *-- StartEvent
Lane *-- EndEvent
Lane *-- IntermediateEvent


' class Gateway
' class DataObject
' class DataInput
' class DataOutput
' class DataStore
class Lane
class Pool

Box o-- Shape
Circle o-- Shape
Triangle o-- Shape
' Data o-- Shape
' Drum o-- Shape
Activity o-- Box
Event o-- Circle
' Gateway o-- Triangle
' DataObject o-- Data
' DataInput o-- Data
' DataOutput o-- Data
' DataStore o-- Drum

Painter *-- Pillow
ProcessMap *-- Painter
' ProcessMap *-- Gateway
' ProcessMap *-- DataObject
' ProcessMap *-- DataInput
' ProcessMap *-- DataOutput
' ProcessMap *-- DataStore
ProcessMap *-- Lane
ProcessMap *-- Pool
@enduml